# kalygo3-qna-ingest-cloud-function-python

./: .gcloudignore  .gitignore  README.md  main.py  main_http.py  pyproject.toml  requirements.txt  test_import.py
READMEs/: test_curl.md
clients/: __init__.py  gcs_client_factory.py  secret_manager_client.py
db/: __init__.py  credential_model.py  database.py  enums.py  models.py
helpers/: credential_crypto.py  csv_processor.py  db_logger.py  embedding.py  gcs.py  get_secret.py  pinecone.py
singletons/: environment_variables.py
