[project]
name = "kalygo3-qna-ingest-cloud-function"
version = "0.1.0"
description = "Cloud Function for ingesting QnA knowledge stored in a .csv into a Pinecone Vector DB"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "google-cloud-storage>=2.10.0",
    "google-cloud-secret-manager>=2.16.0",
    "pinecone>=5.0.0",
    "requests>=2.31.0",
    "functions-framework>=3.5.0",
    "flask>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helpers", "clients", "singletons"]
# Include root-level Python files
include = [
    "main.py",
]

